--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   top: -25px;
   left: -25px;
   z-index: -99;
-  filter: blur(15px); 
+  filter: blur(25px); 
   
 }
 
@@ -84,14 +84,14 @@
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
-  padding: 50px 70px;
+  padding: 100px 70px;
   margin-top: auto;
   width: 100%;
 }
 
 @media (max-width: 575.98px) {
   .bottom-content {
-    padding: 50px 30px;
+    padding: 100px 30px;
   }
 }
 
@@ -141,6 +141,9 @@
   .content-right {
     text-align: center;
     justify-content: center;
+  }
+  .bottom-content {
+    padding: 100px 30px;
   }
 }
 
