--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
   color: #fff;
   font-size: 160px;
   text-shadow: var(--text-shadow);
+  margin-top: -200px;
 }
 
 @media (max-width: 575.98px) {
