--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ button:hover {
     <div class="bg-wrapper">
         <!-- content top -->
         <section class="top-content">
-          <h1>
+          <h1 onclick="window.location.href='home.html'">
             <img src="img/home.png" class="index" title="Go To Homepage">
           </h1>
         </section>
