--- a/stock.html
+++ b/stock.html
@@ -203,7 +203,8 @@ input[id="radio-4"]:checked ~ .glider {
     {
       "description": "Dogecoin",
       "proName": "BINANCE:DOGEUSD"
-    }
+    },
+    
     ],
     "colorTheme": "dark",
     "isTransparent": false,
@@ -243,7 +244,15 @@ input[id="radio-4"]:checked ~ .glider {
     [
         "ETC",
         "BINANCE:ETCUSD|12m"
-    ]
+    ],
+    ["ADA", "BINANCE:ADAUSD|12m"], // Cardano
+      ["XRP", "BINANCE:XRPUSD|12m"], // Ripple
+      ["LTC", "BINANCE:LTCUSD|12m"], // Litecoin
+      ["BCH", "BINANCE:BCHUSD|12m"], // Bitcoin Cash
+      ["DOT", "BINANCE:DOTUSD|12m"], // Polkadot
+      ["LINK", "BINANCE:LINKUSD|12m"], // Chainlink
+      ["BNB", "BINANCE:BNBUSD|12m"], // Binance Coin
+      ["MATIC", "BINANCE:MATICUSD|12m"]
       
     ],
     "greyText": "Quotes by",
