--- a/wallet.html
+++ b/wallet.html
@@ -170,7 +170,7 @@ input[id="radio-4"]:checked ~ .glider {
     background-color: #19e86f;
 }
 .button1:hover {
-    background-color: #fa900d;
+    background-color: #fa900d;}
 .glider {
 	 position: absolute;
 	 display: flex;
