--- a/user.html
+++ b/user.html
@@ -195,9 +195,9 @@ input[id="radio-4"]:checked ~ .glider {
             <label class="tab" for="radio-1" onclick="window.location.href='home.html'"><img src="img/navhome.png" class="menus"><span class="notification">2</span></label>
             <input type="radio" id="radio-2" name="tabs" />
             <label class="tab" for="radio-2" onclick="window.location.href='stock.html'"><img src="img/chart.png" class="menus"></label>
-            <input type="radio" id="radio-3" name="tabs" checked  />
+            <input type="radio" id="radio-3" name="tabs"  />
             <label class="tab" for="radio-3" ><img src="img/wallet.png" class="menus"></label>
-            <input type="radio" id="radio-4" name="tabs" /> <!-- New radio button for the "User" tab -->
+            <input type="radio" id="radio-4" name="tabs"   checked/> <!-- New radio button for the "User" tab -->
             <label class="tab" for="radio-4" onclick="window.location.href='user.html'"><img src="img/navuser.png" class="menus"></label> <!-- New label for the "User" tab -->
             <span class="glider"></span>
         </div>
