--- a/stock.html
+++ b/stock.html
@@ -181,7 +181,7 @@ input[id="radio-4"]:checked ~ .glider {
 <body>
   
     <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container" style="margin-top:10px;">
+<div class="tradingview-widget-container" style="margin-bottom: 20px;">
     <div class="tradingview-widget-container__widget"></div>
     <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
     {
