--- a/stock.html
+++ b/stock.html
@@ -181,7 +181,7 @@ input[id="radio-4"]:checked ~ .glider {
 <body>
   
     <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container" style="margin-bottom: 20px;">
+<div class="tradingview-widget-container" style="margin-bottom: 15px;">
     <div class="tradingview-widget-container__widget"></div>
     <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
     {
@@ -219,7 +219,7 @@ input[id="radio-4"]:checked ~ .glider {
 
 
 <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
+<div class="tradingview-widget-container" style="margin-bottom: 10px;margin-top:5px">
     <div id="tv-medium-widget"></div>
      <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
     <script type="text/javascript">
@@ -263,7 +263,7 @@ input[id="radio-4"]:checked ~ .glider {
     "underLineColor": "#dbeffb",
     "trendLineColor": "#4bafe9",
     "width": "100%",
-    "height": "600px",
+    "height": "500px",
     "locale": "en"
   }
     );
