--- a/home.html
+++ b/home.html
@@ -184,7 +184,7 @@ input[id="radio-4"]:checked ~ .glider {
     <div class="content">
         
         <h4>Balance</h4>
-        <h2>{balance}<sup class="profit">{profit}</sup></h2>
+        <h2>$4563.19<sup class="profit">+18.9</sup></h2>
         <div class="button-container">
             <button class="button1">Deposit</button>
             <button class="button2">Transfer</button>
