--- a/wallet.html
+++ b/wallet.html
@@ -188,6 +188,7 @@ input[id="radio-4"]:checked ~ .glider {
 	 box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.206), 0 3px 2px 0 rgba(24, 94, 224, 0.25);
 	 padding: 0.3rem;
 	 border-radius: 99px;
+	 margin-bottom: -10px;
 }
 .tab {
 	 display: flex;
