--- a/home.html
+++ b/home.html
@@ -60,7 +60,8 @@
 
 .button-container {
     display: flex;
-    justify-content: center; /* Adjust as needed */
+    justify-content: center;
+    margin-top: -5px;/* Adjust as needed */
 }
 
 .button1 {
