--- a/user.html
+++ b/user.html
@@ -101,7 +101,7 @@ input[id="radio-4"]:checked ~ .glider {
 	 position: absolute;
 	 display: flex;
 	 height: 50px;
-	 width: 120px;
+	 width: 1000px;
 	 background-color: var(--secondary-color);
 	 z-index: 1;
 	 border-radius: 50px;
@@ -110,7 +110,7 @@ input[id="radio-4"]:checked ~ .glider {
 .tabs {
 	 display: flex;
 	 position: relative;
-	 background-color: #ffffff3f;
+	 background-color: #ffffffe0;
 	 box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.206), 0 3px 2px 0 rgba(24, 94, 224, 0.25);
 	 padding: 0.3rem;
 	 border-radius: 99px;
@@ -121,7 +121,7 @@ input[id="radio-4"]:checked ~ .glider {
 	 align-items: center;
 	 justify-content: center;
 	 height: 50px;
-	 width: 120px;
+	 width: 150px;
 	 font-size: 1.25rem;
 	 font-weight: 500;
 	 border-radius: 99px;
@@ -281,12 +281,10 @@ input::placeholder {
         <div class="tabs">
             <input type="radio" id="radio-1" name="tabs" />
             <label class="tab" for="radio-1" onclick="window.location.href='home.html'"><img src="img/navhome.png" class="menus"><span class="notification">2</span></label>
-            <input type="radio" id="radio-2" name="tabs" />
+            <input type="radio" id="radio-2" name="tabs" checked />
             <label class="tab" for="radio-2" onclick="window.location.href='stock.html'"><img src="img/chart.png" class="menus"></label>
             <input type="radio" id="radio-3" name="tabs"  />
             <label class="tab" for="radio-3" ><img src="img/wallet.png" class="menus"></label>
-            <input type="radio" id="radio-4" name="tabs" checked  /> <!-- New radio button for the "User" tab -->
-            <label class="tab" for="radio-4" onclick="window.location.href='user.html'"><img src="img/navuser.png" class="menus"></label> <!-- New label for the "User" tab -->
             <span class="glider"></span>
         </div>
         
