--- a/user.html
+++ b/user.html
@@ -205,11 +205,13 @@ input {
 .pass{
     border-radius: 25px;
     height: 35px;
+    width: 90%;
     background-color: rgba(255, 255, 255, 0.393);
 }
 .passbutton{
     border-radius: 25px;
     height: 35px;
+    width: 90%;
     
 }
 
