--- a/user.html
+++ b/user.html
@@ -102,8 +102,8 @@ input[id="radio-4"]:checked ~ .glider {
 	 display: flex;
 	 height: 50px;
 	 width: 150px;
-	 background-color: var(--secondary-color);
-	 z-index: 1;
+	 background-color:#ffffffe0; 
+	 z-index: 2;
 	 border-radius: 50px;
 	 transition: 0.5s ease-out;
 }
