--- a/user.html
+++ b/user.html
@@ -285,7 +285,7 @@ input::placeholder {
             <input type="radio" id="radio-2" name="tabs" checked />
             <label class="tab" for="radio-2" onclick="window.location.href='stock.html'"><img src="img/chart.png" class="menus"></label>
             <input type="radio" id="radio-3" name="tabs"  />
-            <label class="tab" for="radio-3" ><img src="img/wallet.png" class="menus"></label>
+            <label class="tab" for="radio-3" onclick="window.location.href='wallet.html'"><img src="img/wallet.png" class="menus"></label>
             <span class="glider"></span>
         </div>
         
