--- a/home.html
+++ b/home.html
@@ -197,8 +197,8 @@ input[id="radio-4"]:checked ~ .glider {
         <h4>Balance</h4>
         <h2>$4563.19<sup class="profit">+18.9</sup></h2>
         <div class="button-container">
-            <button class="button1">Deposit</button>
-            <button class="button2">Transfer</button>
+            <button class="button1" onclick="window.location.href='deposit.html'">Deposit</button>
+            <button class="button2"onclick="window.location.href='transfer.html'">Transfer</button>
         </div>
         <div class="market">
             <div class="tradingview-widget-container">
