--- a/wallet.html
+++ b/wallet.html
@@ -337,8 +337,8 @@ input[id="radio-4"]:checked ~ .glider {
             <h5 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;margin-left: 25px;margin-bottom: -2px;">current balance</h5>
             <div style="font-size:35px;margin-left: 25px;margin-bottom: 20px;">$4563.19</div>
             <div class="button-container" style="margin-bottom: 20px;">
-                <button class="button1">Deposit</button>
-                <button class="button2">Transfer</button>
+                <button class="button1" onclick="window.location.href='deposit.html'">Deposit</button>
+            <button class="button2"onclick="window.location.href='transfer.html'">Transfer</button>
             </div>
             
             <section>
