--- a/transfer.html
+++ b/transfer.html
@@ -291,7 +291,8 @@ form {
             <input type="text" placeholder="Enter Wallet Address" id="inputFieldTransfer" name="inputFieldTransfer" style="height: 50px;width: 300px;border-radius: 25px;margin-top: 15px;margin-left: 20px;margin-bottom: 20px;text-align: center;font-weight: bold;color: black;">
         </div>
     
-        <input type="submit" value="Submit" style="margin-left: 20px;"><input type="clear" class="clear" value="Refresh" style="margin-left: 10px;">
+        <input type="submit" value="Submit" style="margin-left: 20px;"><input type="button" class="clear" value="Refresh" style="margin-left: 10px;">
+
         
     </form>
     <img src="img/transfer.png" height="150px" style="float: right;">
