--- a/deposit.html
+++ b/deposit.html
@@ -269,7 +269,8 @@ form {
         </script>
       </div>
       <form action="#">
-        <h2 style="color: white;text-align: center;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Deposits</h2>
+         <h1 style="color: white; text-align: left; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;margin-left:30px;">Deposits</h1>
+
         <label for="crypto">Select crypto</label>
         <div>
         <select id="crypto" name="crypto">
